[gd_scene load_steps=4 format=3 uid="uid://lxawgeot6dxc"]

[ext_resource type="PackedScene" uid="uid://c8yh1l5qboc2v" path="res://addons/panku_console/components/lynx_window2/lynx_window.tscn" id="1_rfe1c"]
[ext_resource type="Script" path="res://addons/panku_console/components/widgets2/monitor_widget.gd" id="2_edoyc"]
[ext_resource type="Texture2D" uid="uid://3fucq7k12dgf" path="res://addons/panku_console/res/pics/icons8-settings-24.png" id="3_h636x"]

[node name="MonitorWidget" instance=ExtResource("1_rfe1c")]
offset_right = 379.0
offset_bottom = 348.0
script = ExtResource("2_edoyc")
no_shadow = true
transparency = 0.6

[node name="Title" parent="Body" index="0"]
custom_minimum_size = Vector2(0, 27)

[node name="TitleButton" parent="Body/Title" index="0"]
theme_override_font_sizes/font_size = 0

[node name="SettingsBtn" type="Button" parent="Body/Title" index="1"]
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
icon = ExtResource("3_h636x")
icon_alignment = 1
expand_icon = true

[node name="ExitButton" parent="Body/Title" index="2"]
custom_minimum_size = Vector2(27, 0)

[node name="Content" parent="Body" index="1"]
clip_contents = true
custom_minimum_size = Vector2(0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Body/Content" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
text = "NO OUTPUT"
scroll_active = false

[node name="SettingsUI" type="ColorRect" parent="Body/Content" index="1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.141176, 0.152941, 1)

[node name="MarginContainer" type="MarginContainer" parent="Body/Content/SettingsUI" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Body/Content/SettingsUI/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Button" type="Button" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Freq"
vertical_alignment = 1

[node name="Label2" type="Label" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
text = "0/s"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 30.0

[node name="Button" type="Button" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer" index="3"]
layout_mode = 2
text = "Confirm"

[node name="HBoxContainer2" type="HBoxContainer" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Exp"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
layout_mode = 2
text = "Confirm"

[node name="HBoxContainer3" type="HBoxContainer" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer3" index="0"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Title"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer3" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer/HBoxContainer3" index="2"]
layout_mode = 2
text = "Confirm"

[node name="Label" type="Label" parent="Body/Content/SettingsUI/MarginContainer/VBoxContainer" index="4"]
layout_mode = 2
text = "[Hint] Click the title to update immediately."
